@@ -1,7 +1,7 @@
 
 EXTRA_DIST = Makefile.simple
 
-INCLUDES = $(MMDB_CXXFLAGS) $(CLIPPER_CXXFLAGS) 
+AM_CPPFLAGS = $(MMDB_CXXFLAGS) $(CLIPPER_CXXFLAGS) 
 
 check_PROGRAMS = catcheck
 
