@@ -20,7 +20,7 @@
 
 COORD_INCLUDES = -I$(top_srcdir)
 
-INCLUDES = $(COORD_INCLUDES) $(CLIPPER_CXXFLAGS) 
+AM_CPPFLAGS = $(COORD_INCLUDES) $(CLIPPER_CXXFLAGS) 
 
 lib_LTLIBRARIES = libcoot-isosurface.la
 
